# rest-ai

./: README.md  pyproject.toml  schema.json
.github/.workflows/: restai.yaml
.github/workflows/: python-build-test.yaml  python-publish.yml
rest_ai/: exceptions.py  openapi_parser.py  rest_ai.py
rest_ai/examples/: main.py  schematest.py
tests/: test_openapi_utils.py
tests/resources/: single-post-expected-schema.json  single-post-openapi.yaml
